--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Hello Test</title>
+</head>
+<body>
+  <h1>Hello, GitHub! 🚀</h1>
+  <p>This is a test project.</p>
+  <script src="script.js"></script>
+</body>
+</html>
 
